# qmini_description

./: .gitignore  CMakeLists.txt  README.md  build_mujoco_xml.py  package.xml  pyproject.toml
config/: joint_names_qmini_description.yaml
launch/: display.launch  gazebo.launch
meshes/: ankle_pitch_l.STL  ankle_pitch_l_link.STL  ankle_pitch_r.STL  ankle_pitch_r_link.STL  hip_pitch_l.STL  hip_pitch_l_link.STL  hip_pitch_r.STL  hip_pitch_r_link.STL  hip_roll_l.STL  hip_roll_l_link.STL  hip_roll_r.STL  hip_roll_r_link.STL  hip_yaw_l.STL  hip_yaw_l_link.STL  hip_yaw_r.STL  hip_yaw_r_link.STL  imu.STL  knee_pitch_l.STL  knee_pitch_l_link.STL  knee_pitch_r.STL  knee_pitch_r_link.STL
mjcf/: dependencies.xml  qmini_description.xml  scene.xml  world.xml  world_terrain.xml
urdf/: qmini_description.csv  qmini_description.urdf
